# hackathon-scientific-text

./: README.md  pyproject.toml
app/: demo.py
scitext/: parser.py
templates/: extraction.txt  rephrasing.txt  summary.txt
